{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "fb0f259c-7224-4aa8-9524-c3c6ae9f82c5",
            "actions": [
                {
                    "name": "TileRotate",
                    "type": "Button",
                    "id": "d7f89e7f-e195-4436-85c3-bbb96a7fcde4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "c865226c-97a0-4779-921c-0d7e49f5dbb1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "969e2a91-e18f-4a25-91e2-3944e96da570",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BrushSize",
                    "type": "Button",
                    "id": "301b887b-3331-4673-af06-ef82b5e2421c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuestMenu",
                    "type": "Button",
                    "id": "f93376f3-622e-4cb4-93cf-8dca9c8c724f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "072f4490-f245-4da0-bc64-3e219db6d342",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TileRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86660c03-5e33-493f-83ba-c2e27b523d7f",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80816a1b-017d-4507-a5d6-1fabd079bf3e",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c39d64-85b8-4d8e-94b5-cad51916c8b0",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BrushSize",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "667c1261-7e75-4ee3-9a4e-d5ccd7335e82",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BrushSize",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ae2c8f7-78b8-41f3-90b9-68c62e9119f1",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BrushSize",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "396956c6-3984-4b75-8cbb-461f272f493d",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BrushSize",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b73bc0b-c9a8-4f8b-92e0-965a6516d55b",
                    "path": "<Keyboard>/l",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "QuestMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}